force-app/main/default/objects/Case_Presence__e/Case_Presence__e.object-meta.xml
<CustomObject>
    <label>Case Presence</label>
    <pluralLabel>Case Presences</pluralLabel>
</CustomObject>