force-app/main/default/objects/Case_Presence__e/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <label>Call Type</label>
    <description>Type of API call: heartbeat or draftCheck</description>
    <type>Text</type>
    <length>50</length>
</CustomField>