force-app/main/default/objects/Case_Presence__e/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>Case Number</label>
    <description>Case number for the case being viewed</description>
    <type>Text</type>
    <length>50</length>
</CustomField>