force-app/main/default/objects/Case_Presence__e/fields/HasDraft__c.field-meta.xml
<CustomField>
    <fullName>HasDraft__c</fullName>
    <label>Has Draft</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>