force-app/main/default/objects/Case_Presence__e/fields/IsMobile__c.field-meta.xml
<CustomField>
    <fullName>IsMobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mobile</label>
    <type>Checkbox</type>
</CustomField>