force-app/main/default/objects/Case_Presence__e/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <label>Session ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>