force-app/main/default/objects/Case_Presence__e/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>