force-app/main/default/objects/Case_Presence__e/fields/UserPhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>UserPhotoUrl__c</fullName>
    <label>User Photo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>